examples/test/testpolicy10019.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10019
  namespace: namespace370
spec:
  podSelector:
    matchLabels:
      key40: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value36
          key46: value43
          key8: value31
      podSelector:
        matchLabels:
          key30: value15
